# nickel

./: .gitignore  Cargo.toml  flake.nix  kompose.nix  make-darwin-dist-binary.sh  publish.sh
kompose/: Cargo.toml  module.ncl  render.sh  run-tests.sh
kompose/develop/: readme.md
kompose/develop/playground/: app.ncl  array-dep-flat.ncl  array-dictionary.ncl  contract-propagate.ncl  contract-propagate2.ncl  deployment.ncl  (+31 more)
kompose/src/: error.rs  export.rs  main.rs  option.rs  render.rs  repl.rs
kompose/tests/: a00.00-dev-debug.ncl  a00.01-dev-show_lazy_tree.ncl  a00.03-dev-stages.ncl  a00.04-render-projection.ncl  a01.00-fail-corrupt-define.ncl  a01.02-merge-conflict.ncl  a02-define-nest-array.ncl  a03-define-noexport.ncl  a06-define-self-module.ncl  a07-define-self-tree.ncl  a08-define-self-tree2.ncl  a09-define-self-array.ncl  a10-merge-fragment.ncl  a12-enable_if-module.ncl  a13-enable_if-middle-tree.ncl  a14-embed-simple.ncl  a15-define-embed.ncl  a16-embed-ancestor.ncl  a17-embed-ancestor_siblings.ncl  a18-module-input.ncl  a19-input-inherit.ncl  a20-multi-level-order.ncl  a21-hierarchy-define-array.ncl  a23-nest-empty-array.ncl  a24-error-extra-field.ncl  a25-render-order.ncl  a26-middle-self-merge-disabled.ncl  a27-self-root-merge-disabled.ncl  a28-root-self-fragment.ncl  a29-disable-root-self-module.ncl  a30-root-self-module-fragment.ncl  a31-self-disable-value.ncl  a32-disable-middle.ncl  a33-disable-middle-value.ncl  a34-input-as-filter.ncl  a35-disable-root-by-null.ncl  a36-disable-module-by-null.ncl  a37-inject-value.ncl  a38-empty-lazy.ncl  a39-any.ncl  (+2 more)
(+43 files in other folders)
