[package]
name = "kompose-cli"
version = "0.0.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kp"
path = "src/main.rs"
bench = false

[dependencies]
nickel-lang-core = { workspace = true, features = [ "markdown", "repl" ], default-features = false }

anyhow = "1.0"
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
directories.workspace = true

tempfile = { workspace = true, optional = true }

git-version = { workspace = true }
clap_complete = { workspace = true }

metrics = { workspace = true, optional = true }
metrics-util = { workspace = true, optional = true }

regex = "1"
lazy_static = "1"

indoc = "2"
itertools = "0.13"

[dev-dependencies]
nickel-lang-utils.workspace = true
test-generator.workspace = true
insta = { workspace = true, features = ["filters"] }
